# AI-GameCoach

./: .gitignore  PROJECT.md  README.md  deploy.bat
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/llm/: __init__.py  qwen_client.py
backend/models/: __init__.py  report.py
backend/pipeline/: __init__.py  analyzer.py  run_analysis.py  screenshotter.py
backend/services/: dota_meta.py
data/: dota_meta_cache.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/app/analysis/[id]/report/: page.tsx
frontend/components/dashboard/: AnalysisPanel.tsx  DotaMetaPanel.tsx  LineupCard.tsx  MatchSummary.tsx  SegmentCard.tsx  TimelineSidebar.tsx  TimelineTracks.tsx  VideoPlayer.tsx
frontend/components/report/: ProblemMap.tsx  SummaryCards.tsx
frontend/components/shared/: GameSwitcher.tsx  PolarityBadge.tsx  SeverityIcon.tsx
frontend/components/upload/: DropZone.tsx  UploadProgress.tsx  VideoDropZone.tsx
frontend/context/: GameContext.tsx
frontend/hooks/: useAnalysisTask.ts  useDotaAnalysis.ts  useUploadTask.ts
frontend/lib/: api-client.ts  mock-data.ts  types.ts  video-storage.ts
